force-app/main/default/objects/TB_Affiliate_Audit__c/TB_Affiliate_Audit__c.object-meta.xml
<CustomObject>
    <label>TB Affiliate Audit</label>
    <nameField>
        <displayFormat>TB Audit - {0000}</displayFormat>
        <label>TB Affiliate Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TB Affiliate Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>