force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Additional_Earned_Income_Programs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Earned_Income_Programs__c</fullName>
    <inlineHelpText>Please list what additional &quot;Earned Incomes&quot; programs are being administered at the ToolBank.</inlineHelpText>
    <label>Additional &apos;Earned Income&apos; Programs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>