force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Affiliate_Fees_for_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Fees_for_Last_Year__c</fullName>
    <label>Affiliate Fees for Last Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>