force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Appropriate_In_Kind_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_In_Kind_Recognition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reminder to provide written receipt to the donor for inkind donation.  Donor declares value.</inlineHelpText>
    <label>Appropriate In-Kind Receipting</label>
    <type>Checkbox</type>
</CustomField>