force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Approved_Depreciation_Capitalization__c.field-meta.xml
<CustomField>
    <fullName>Approved_Depreciation_Capitalization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Depr &amp; Capitalization Policy</label>
    <type>Checkbox</type>
</CustomField>