force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Approved_for_Additional_Earned_Income__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Additional_Earned_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Additional &apos;Earned Income&apos;</label>
    <type>Checkbox</type>
</CustomField>