force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Approved_Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Approved_Mission_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use of approved Mission Statement</description>
    <label>Approved Mission Statement</label>
    <type>Checkbox</type>
</CustomField>