force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Approved_Tool_Handling_Fees__c.field-meta.xml
<CustomField>
    <fullName>Approved_Tool_Handling_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Tool Handling Fees</label>
    <type>Checkbox</type>
</CustomField>