force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Approved_Tool_Tracking_System__c.field-meta.xml
<CustomField>
    <fullName>Approved_Tool_Tracking_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use of Approved Tool Tracking System</description>
    <label>Approved Tool Tracking System</label>
    <type>Checkbox</type>
</CustomField>