force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Approved_ToolBank_Logo_Brand_Standards__c.field-meta.xml
<CustomField>
    <fullName>Approved_ToolBank_Logo_Brand_Standards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved ToolBank Logo &amp; Brand Standards</label>
    <type>Checkbox</type>
</CustomField>