force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Board_List_for_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Board_List_for_Current_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board List for Current Year</label>
    <type>Checkbox</type>
</CustomField>