force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Branded_Tools__c.field-meta.xml
<CustomField>
    <fullName>Branded_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tools must be blue or marked with the ToolBank Logo</inlineHelpText>
    <label>Branded Tools</label>
    <type>Checkbox</type>
</CustomField>