force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Budget_for_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_for_Current_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget for Current Year</label>
    <type>Checkbox</type>
</CustomField>