force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year__c</fullName>
    <label>Calendar Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021</fullName>
                <default>true</default>
                <label>2021</label>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>