force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Charitable_Solicitations_Registration__c.field-meta.xml
<CustomField>
    <fullName>Charitable_Solicitations_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charitable Solicitations Registration</label>
    <type>Checkbox</type>
</CustomField>