force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Completed_by_Independent_CPA__c.field-meta.xml
<CustomField>
    <fullName>Completed_by_Independent_CPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed by Independent CPA</label>
    <type>Checkbox</type>
</CustomField>