force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Current_990_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Current_990_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current 990 on Website</label>
    <type>Checkbox</type>
</CustomField>