force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Current_Financial_Review_Audit_on_Web__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Review_Audit_on_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post current financial review / audit on website</description>
    <label>Current Financial Review / Audit on Web</label>
    <type>Checkbox</type>
</CustomField>