force-app/main/default/objects/TB_Affiliate_Audit__c/fields/D_O__c.field-meta.xml
<CustomField>
    <fullName>D_O__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Director &amp; officer&apos;s insurance: minimum $1 million liability limit</inlineHelpText>
    <label>D&amp;O</label>
    <type>Checkbox</type>
</CustomField>