force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Date_of_Default__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Default__c</fullName>
    <label>Date of Default</label>
    <type>Date</type>
</CustomField>