force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Default_Event__c.field-meta.xml
<CustomField>
    <fullName>Default_Event__c</fullName>
    <label>Default Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Finances</fullName>
            </value>
            <value>
                <fullName>Programming</fullName>
            </value>
            <value>
                <fullName>General Operations</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>