force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Extension_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Due_Date__c</fullName>
    <label>Extension Due Date</label>
    <type>Date</type>
</CustomField>