force-app/main/default/objects/TB_Affiliate_Audit__c/fields/February_Board_Financial_Update__c.field-meta.xml
<CustomField>
    <fullName>February_Board_Financial_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>February Board Financial Update</label>
    <type>Checkbox</type>
</CustomField>