force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Financial_Review_Audit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Financial_Review_Audit_Completed__c</fullName>
    <label>Financial Review / Audit Completed</label>
    <type>Date</type>
</CustomField>