force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Financial_Review_Audit_Required__c.field-meta.xml
<CustomField>
    <fullName>Financial_Review_Audit_Required__c</fullName>
    <description>Picklist dictating whether a financial review or audit was performed</description>
    <label>Financial Review / Audit - REQUIRED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Review</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>