force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Latest_Version_of_MA_SP_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version_of_MA_SP_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the affiliate of the latest version of the Membership Agreement and Service Policy on their website?</inlineHelpText>
    <label>Latest Version of MA &amp; SP on Website</label>
    <type>Checkbox</type>
</CustomField>