force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>$2 million aggregate - Include TBUSA as additional insured and provide COI (Certificate of Insurance).</inlineHelpText>
    <label>Liability</label>
    <type>Checkbox</type>
</CustomField>