force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Loan_Debt_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Debt_Disclosure__c</fullName>
    <description>Full Disclosure of Loans or other Debts</description>
    <label>Loan / Debt Disclosure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>