force-app/main/default/objects/TB_Affiliate_Audit__c/fields/October_Board_Financial_Update__c.field-meta.xml
<CustomField>
    <fullName>October_Board_Financial_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>October Board Financial Update</label>
    <type>Checkbox</type>
</CustomField>