force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Previous_Fiscal_Year_990__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fiscal_Year_990__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to be used to indicate if a TB Affiliate has their previous FY 990 on their website.</description>
    <label>Previous Fiscal Year 990</label>
    <type>Checkbox</type>
</CustomField>