force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Previous_Fiscal_Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fiscal_Year_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Fiscal Year Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>