force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Primary_Activity_Tool_Lending__c.field-meta.xml
<CustomField>
    <fullName>Primary_Activity_Tool_Lending__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tool Lending is the primary activity of the ToolBank</inlineHelpText>
    <label>Primary Activity: Tool Lending</label>
    <type>Checkbox</type>
</CustomField>