force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Project_Fund_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Project_Fund_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Fund Contribution</label>
    <type>Checkbox</type>
</CustomField>