force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Records_In_Kind_Donations__c.field-meta.xml
<CustomField>
    <fullName>Records_In_Kind_Donations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Records In-Kind Donations</label>
    <type>Checkbox</type>
</CustomField>