force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Requested_Extension__c.field-meta.xml
<CustomField>
    <fullName>Requested_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Extension</label>
    <type>Checkbox</type>
</CustomField>