force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Same_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Same_Fiscal_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fiscal Year must be the same as TB USA</description>
    <inlineHelpText>Fiscal Year must be the same as TB USA (Calendar Year)</inlineHelpText>
    <label>Same Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>