force-app/main/default/objects/TB_Affiliate_Audit__c/fields/SecState_Regulatory_File__c.field-meta.xml
<CustomField>
    <fullName>SecState_Regulatory_File__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This can be satisfied with a regulatory file signed by the Secretary of State or another authorizing agency.</inlineHelpText>
    <label>SecState Regulatory File</label>
    <type>Checkbox</type>
</CustomField>