force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Signed_Confidentiality_AGMT_On_File__c.field-meta.xml
<CustomField>
    <fullName>Signed_Confidentiality_AGMT_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confidentiality Agreements signed by all staff and board</description>
    <inlineHelpText>TBUSA does not keep the signed confidentiality agreements.</inlineHelpText>
    <label>Signed Confidentiality AGMT On Fil</label>
    <type>Checkbox</type>
</CustomField>