force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Signed_Conflict_of_Interests__c.field-meta.xml
<CustomField>
    <fullName>Signed_Conflict_of_Interests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Conflict of Interests</label>
    <type>Checkbox</type>
</CustomField>