force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Staff_Background_Checks_Optional__c.field-meta.xml
<CustomField>
    <fullName>Staff_Background_Checks_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Background Checks for all Staff</description>
    <label>Staff Background Checks - OPTIONAL</label>
    <type>Checkbox</type>
</CustomField>