force-app/main/default/objects/TB_Affiliate_Audit__c/fields/TBUSA_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>TBUSA_Staff_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who from TBUSA visited this ToolBank</inlineHelpText>
    <label>TBUSA Staff Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TB_Affiliate_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>