force-app/main/default/objects/TB_Affiliate_Audit__c/fields/THF_Percentage__c.field-meta.xml
<CustomField>
    <fullName>THF_Percentage__c</fullName>
    <inlineHelpText>What is the THF percentage?</inlineHelpText>
    <label>THF Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>