force-app/main/default/objects/TB_Affiliate_Audit__c/fields/ToolBank_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>ToolBank_Affiliate__c</fullName>
    <label>ToolBank Affiliate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>ToolBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TB Affiliate Audits</relationshipLabel>
    <relationshipName>TB_Affiliate_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>