force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <inlineHelpText>Insurance for TB Affiliate-owned vehicles as required by the regulations of the state in which the TB Affiliate operates.</inlineHelpText>
    <label>Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>