force-app/main/default/objects/TB_Affiliate_Audit__c/fields/Workers_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>As required by the regulations of the state in which the TB Affiliate operates.</inlineHelpText>
    <label>Workers&apos; Compensation</label>
    <type>Checkbox</type>
</CustomField>