force-app/main/default/objects/TB_Affiliate_Audit__c/fields/X990_Posted_on_Website__c.field-meta.xml
<CustomField>
    <fullName>X990_Posted_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>990 Posted on Website</label>
    <type>Checkbox</type>
</CustomField>