force-app/main/default/objects/TB_Affiliate_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ToolBank_Affiliate__c</columns>
    <columns>Calendar_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>